# mhd-ws

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile.database  Dockerfile.redis  Dockerfile.ws  Dockerfile.ws_worker  README.md  alembic.ini  config-secrets.example.yaml  config.example.yaml  docker-compose.yaml  mhd-ws-config.example.yaml  pyproject.toml
db_revisions/: env.py
db_revisions/versions/: 2025_04_15_1715-1a8c5681a323_initial_revision.py  2026_01_23_2151-9940b74caeda_.py  2026_03_16_1250-0f718afb29a2_add_logo_url_to_repository.py
docs/: index.md
mhd_ws/: __init__.py
mhd_ws/application/context/: async_task_registry.py  request_tracker.py
mhd_ws/application/decorators/: async_task.py  validate.py
mhd_ws/application/remote_tasks/common/: ping.py  utils.py
mhd_ws/application/services/interfaces/: advanced_search_port.py  cache_service.py  search_port.py
mhd_ws/application/services/interfaces/async_task/: async_task_executor.py  async_task_result.py  async_task_service.py  conection.py  utils.py
mhd_ws/application/use_cases/: announcement_conversion.py
mhd_ws/application/utils/: auth_utils.py  folder_utils.py  http_utils.py  size_utils.py
mhd_ws/domain/component_configs/: configuration.py
mhd_ws/domain/domain_services/: configuration_generator.py  query_planner.py  search_spec_resolver.py
mhd_ws/domain/entities/: auth_user.py
mhd_ws/domain/entities/search/: __init__.py  dtos.py  index_search.py  index_search_spec.py  predicate_tree.py  stages.py  types.py
mhd_ws/domain/entities/search/advanced_core/: __init__.py  plan.py  predicates.py  registries.py  spec.py  types.py
mhd_ws/domain/entities/search/legacy/: facet_configuration.py
mhd_ws/domain/entities/search/registries/: field_registry.py  index_capability_registry.py  models.py
mhd_ws/domain/exceptions/: async_task.py  auth.py  base.py
mhd_ws/domain/shared/: data_types.py  model.py  model_validators.py
mhd_ws/domain/shared/async_task/: async_task_description.py  async_task_summary.py
mhd_ws/infrastructure/announcement/: mhd_model_adapter.py
mhd_ws/infrastructure/cache/in_memory/: in_memory_cache.py
mhd_ws/infrastructure/cache/redis/: redis_config.py  redis_impl.py
mhd_ws/infrastructure/cache/redis_sentinel/: redis_sentinel_config.py  redis_sentinel_impl.py
mhd_ws/infrastructure/persistence/db/: __init__.py  db_client.py  mhd.py
mhd_ws/infrastructure/persistence/db/postgresql/: config.py  db_client_impl.py
mhd_ws/infrastructure/persistence/db/sqlite/: config.py  db_client_impl.py
mhd_ws/infrastructure/pub_sub/celery/: base_task.py  celery_impl.py
mhd_ws/infrastructure/pub_sub/connection/: redis.py  redis_sentinel.py
mhd_ws/infrastructure/pub_sub/threading/: thread_manager_impl.py
mhd_ws/infrastructure/search/: es_client.py
mhd_ws/infrastructure/search/es/: advanced_search_gateway.py  base_es_gateway.py  es_configuration.py  es_dsl_compiler.py  es_dsl_compiler_core.py  es_dsl_compiler_mhd_extension.py
mhd_ws/infrastructure/search/es/legacy/: es_legacy_search_gateway.py
mhd_ws/infrastructure/search/indexing/: dataset_builder.py  facets.py  graph_utils.py  io_utils.py  metabolite_builder.py  utils.py
mhd_ws/presentation/rest_api/core/: auth_backend.py  auth_utils.py  authorization_middleware.py  base.py  core_router.py  exception.py  models.py  responses.py
mhd_ws/presentation/rest_api/groups/mhd/v0_1/routers/: announcement_endpoints.py  auth_endpoints.py  db.py  db_utils.py  dependencies.py  identifier_endpoints.py  models.py  search_endpoints.py  server_info.py  tasks.py
mhd_ws/presentation/rest_api/shared/: data_types.py  dependencies.py  router_utils.py
mhd_ws/run/: __init__.py  config.py  config_renderer.py  module_utils.py  subscribe.py
mhd_ws/run/cli/: main.py
mhd_ws/run/cli/announcement/: containers.py  derive_announcement.py  load_announcement.py  seed_datasets.py
mhd_ws/run/cli/graph/: __init__.py  load_neo4j.py
mhd_ws/run/cli/indexing/: containers.py  index_datasets.py
mhd_ws/run/rest_api/mhd/: base_container.py  containers.py  initialization.py  log_filter.py  main.py  mhd_ping.py
mhd_ws/run/worker/common/: containers.py  log_filter.py  main.py
mhd_ws/run/worker/mhd/: containers.py  main.py
mhd_ws/run/worker/monitor/flower/: containers.py  main.py
resources/: redoc.standalone.js
resources/es/mappings/: hypothetical_ms_mapping.json  legacy_mapping.json  metabolite_mapping.json  ms_mapping.json
scripts/: create_signed_jwt.py  db-user-db.sh  generate_rsa_keypair.py
tests/data/rsa-key/: private.key  public.pem
tests/domain/domain_services/: test_query_planner.py  test_search_spec_resolver.py
tests/infrastructure/: test_postgresql_db_client.py
tests/infrastructure/announcement/: test_load_announcement_cli.py  test_mhd_model_adapter.py
tests/infrastructure/search/: test_advanced_search_gateway.py  test_es_client.py  test_es_dsl_compiler.py
tests/presentation/rest_api/groups/mhd/v0_1/routers/: test_advanced_search.py
tests/presentation/rest_api/tasks/: test_derive_announcement.py
