[tool.poetry]
name = "mhd-ws"
version = "v0.1.0"
description = "Metabolomics Hub WebServices"
authors = ["MetaboLights Team <metabolights-dev@ebi.ac.uk>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "mhd", format = "wheel"}]

[tool.poetry.dependencies]
python = ">=3.12,<4"
pydantic = "^2.10.2"
python-dateutil = "^2.9.0.post0"
pytz = "^2024.2"
pyyaml = ">=6.0.2"
dependency-injector = "^4.42.0"
metabolights-utils = "^1.4.2"

# celery worker dependencies
uvloop =  { version = "^0.21.0", optional = true }
celery = { version = ">=5.4.0", extras = ["redis"], optional = true }
httpx = { version = ">=0.27.0", optional = true }
sqlalchemy = { version = ">=2.0.28", optional = true }
psycopg2-binary = { version = "^2.9.9", optional = true }
asyncpg = { version = ">=0.29.0", optional = true }
redis = { version = ">=5.2.1", optional = true }
flower = "^2.0.1"


#ws
uvicorn =  { version = ">0.29.0", optional = true }
fastapi =  { version = ">=0.115.5", optional = true }
python-multipart = { version = ">=0.0.9", optional = true }
asgi-correlation-id =  { version = "^4.3.4", optional = true }
aiocache =  { version = ">=0.12.2", optional = true }
pyjwt = { version = ">=2.9.0", optional = true }

jsonpath-ng = "^1.7.0"
pymongo = "^4.10.1"
gunicorn = "^23.0.0"
ujson = "^5.10.0"
cryptography = "^44.0.2"
alembic = "^1.15.2"
psycopg2 = "^2.9.10"
sqlacodegen = "^3.0.0"
email-validator = "^2.2.0"
bioregistry = "^0.12.11"
ftputil = "^5.1.0"
reachable = "^0.7.0"
charset-normalizer = "3.4.1"
mhd-model = {path = "../mhd-model"}


[tool.poetry.extras]
ws = ["uvloop", "celery", "httpx", "sqlalchemy", "asyncpg", "metabolights-utils", "redis", "fastapi", "python-multipart", "uvicorn", "aiocache", "pyjwt", "asgi-correlation-id"]
ws_worker = ["uvloop", "celery", "httpx", "sqlalchemy", "asyncpg", "metabolights-utils", "redis"]

[tool.poetry.group.dev.dependencies]
import-linter = "^2.1"
ruff = "^0.8.3"
commitizen = "^4.1.0"
pre-commit = "^4.0.1"
mkdocs-material = "^9.5.49"

[tool.coverage.run]
omit = [
  ".*",
  "*/tests/*",
  "*/site-packages/*",
  "*/docs/*",
  "*/site/*",
  "*/dist/*",
  ".*/*",
  "dist*/",
  "validation*/",
  "scripts*/",
]

[tool.coverage.report]
# fail_under = 80

[tool.coverage.html]
directory = ".coverage_html_report"


























[tool.poetry.group.test.dependencies]
pytest = ">=8.3.4"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.commitizen]
name = "cz_conventional_commits"
version = "3.3.0"
tag_format = "v$major.$minor.$patch"
version_files = [
    "pyproject.toml:version",
    "mhd/__init__.py:__version__",
]
bump_message = "bump: version $current_version -> $new_version"
update_changelog_on_bump = true

[tool.pytest.ini_options]
addopts = "-ra -q -v"
testpaths = [
    "tests"
]
asyncio_default_fixture_loop_scope = "function"


[tool.ruff.lint]
extend-select = ["E4", "E7", "E9", "F", "I", "G", "SLF", "PTH", "Q"]
fixable = ["ALL"]


[tool.importlinter]
include_external_packages = true
root_packages = ["mtbls"]

[[tool.importlinter.contracts]]
name = "Architecture Layer Dependencies"
type = "layers"
layers = [
    "mhd.run",
    "mhd.infrastructure | mhd.presentation",
    "mhd.application",
    "mhd.domain"
]
